# qisC

./: CMakeLists.txt  errorcodes.md  readme.md
include/: qisc.h
include/algos/: classred.h  fourier.h  grover.h  phaseest.h
include/core/: error.h  gate.h  qubit.h  tensor.h
include/gates/: gatelib.h
src/algos/: fourier.c  grover.c
src/cli/: qisc_cli.c
src/core/: error.c  gate.c  qubit.c  tensor.c
src/gates/: gatelib.c
